2012-04-19 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/stdio/strmmssp.c:
	  fixed use of access bank vs. BSR

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptr{get,put}[1234].c,
	  device/lib/pic16/libsdcc/gptr/eeprom{8,16}_write.c:
	  implement EEPROM read/write access

	* device/lib/pic16/libsdcc/gptr/gptr{get,put}[1234].c:
	  call EEPROM dispatchers on EEPROM accesses

	* device/lib/pic16/libsdcc/Makefile.am:
	  add gptr EEPROM accessors

	* device/non-free/lib/pic16/libdev/gptr/*:
	  dispatch EEPROM accesses to the appropriate implementations
	  based on device capabilities (no eeprom, 8 or 16 bit EEPROM
	  address space)

	* device/non-free/lib/pic16/libdev/mkmk.sh,
	  device/non-free/lib/pic16/libdev/newdevices.txt:
	  improved to automatically add SSPBUF workaround
	  plus EEPROM dispatchers as required by the devices

	* device/non-free/lib/pic16/libdev/pic18f1330.c,
	  device/non-free/lib/pic16/libdev/pic18f1220.c,
	  device/non-free/lib/pic16/libdev/pic18f4450.c:
	  removed manual SSPBUF workaround

	* device/non-free/lib/pic16/libdev/fake_sspbuf.c:
	  provide automatic SSPBUF workaround

	* device/lib/pic16/libsdcc/Makefile.in,
	  device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/libdev/Makefile.in:
	  regenerated

2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: rewrite genCast for register source/results

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Fixes for the cost function (reducing code size and exposing code generation issues).

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c: